--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,28 @@
-version: '3.2'
+version: '3.8'
 
 services:
-  web:
-    build: 
+  php-apache:
+    container_name: apache
+    restart: always 
+    build:
       context: ./
       dockerfile: Dockerfile
-    container_name: php-apache
-    restart: always
     depends_on:
-      - db
+      - database
     volumes:
       - ./docker/www:/var/www/html/
     ports:
-      - 8000:80
+      - 9000:80
 
-  db:
-    container_name: mysql
+  database:
+    container_name: database
     image: mysql:8.0.26
     restart: always
-    command:  --default-authentication-plugin=mysql_native_password
     volumes:
       - ./docker/db:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: aman
       MYSQL_PASSWORD: kiet123
+    ports:
+      - "9906:3306"
